Make corrections for styling on Safari

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ footer {
 
 /* buttons ||*/
 button {
-    margin: 0;
     background-color: #414141;
     border-style: none;
     border-radius: 4px;
@@ -27,6 +26,10 @@ button {
     font-family: 'Inter', sans-serif;
     font-weight: 600;
     font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3px;
 }
 
 button:active {
@@ -87,7 +90,7 @@ button:active {
 }
 
 #screen-result {
-    font-size: 24px;
+    font-size: 18px;
     margin: .75rem;
     height: 30%;
 
@@ -100,10 +103,8 @@ button:active {
 
 #button-layout {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 1fr;
-    gap: 8px;
+    grid-template-columns: 25% 25% 25% 25%;
     margin-bottom: 10%;
-    width: 75%;
+    width: 80%;
     height: 60%;
 }
